# Qwen2.5VL-finetune

./: .gitignore  README.md  VOC2012  demo.py  my_data.ipynb  pyproject.toml  refcocog  requirements.txt  small-coco  temp.ipynb  temp.txt  train.py
demo_code/: data_process_for_coco.ipynb  demo.py  demo_swanlab.py  gmemory_demo.ipynb  image_show.py  model_learning.py
scripts/: data_process_for_refcocog.ipynb  finetune_small-coco.sh  predict_refcocog.sh  predict_small-coco.sh  train_small-coco.sh
utils/: finetune_for_img2text.py  finetune_for_refcocog.py  predict_for_small-coco.py  train_for_img2text.py
