[project]
name = "qwen2-5vl-finetune-for-voc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "decord>=0.6.0",
    "deepspeed>=0.17.1",
    "flash-attn",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "modelscope>=1.27.0",
    "opencv-python>=4.11.0.86",
    "peft>=0.15.2",
    "qwen-vl-utils>=0.0.11",
    "swanlab>=0.6.3",
    "torch>=2.7.1",
    "torchao>=0.11.0",
    "torchinfo>=1.8.0",
    "torchtune>=0.6.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.sources]
flash-attn = { path = "../Downloads/flash_attn-2.8.0.post2+cu12torch2.4cxx11abiTRUE-cp311-cp311-linux_x86_64.whl" }
